# performance_comparison

./: Cargo.toml  LICENSE  README.md  bubblesort  bubblesort.go  bubblesort.py  insetion.go  quicksort
go/: bubblesort.go  insetion.go  par_quicksort.go  par_quicksort2.go  quicksort.go
python/: insertionsort.py  par_quicksort.py  quicksort.py
src/: constants.rs
src/bubble_sort/: main.rs
src/insertion_sort/: main.rs
src/par_quick_sort/: main.rs
src/quick_sort/: main.rs
